// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallSuccesModalContent should match a snapshot where app is  directApi 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        will-test-dev-co-voracious-person
         integration has been successfully enabled.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        For details on how to use the integration and, if there are any additional setup requirements, a member of
         
        MOCK_DEVELOPER_NAME
         will be in touch to help you through the process.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        If you wish to contact them directly, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            Back To App
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      will-test-dev-co-voracious-person
       integration has been successfully enabled.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      For details on how to use the integration and, if there are any additional setup requirements, a member of
       
      MOCK_DEVELOPER_NAME
       will be in touch to help you through the process.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      If you wish to contact them directly, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
        >
          <mock-styled.div />
          Back To App
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallSuccesModalContent should match a snapshot where app not directApi 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname=""
      >
        The 
        will-test-dev-co-voracious-person
         app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        If you wish to contact the developer about using the app, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            Back To App
          </mock-styled.button>
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Launch App
            </mock-styled.button>
          </a>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname=""
    >
      The 
      will-test-dev-co-voracious-person
       app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
    </mock-styled.p>
    <mock-styled.p
      classname=""
    >
      If you wish to contact the developer about using the app, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
        >
          <mock-styled.div />
          Back To App
        </mock-styled.button>
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Launch App
          </mock-styled.button>
        </a>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallSuccesModalContent should match a snapshot where in desktop mode 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname=""
      >
        The 
        will-test-dev-co-voracious-person
         app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
      </mock-styled.p>
      <mock-styled.p
        classname=""
      >
        If you wish to contact the developer about using the app, you can do this via telephone at 
        07777777777
         or email at
         
        <a
          href="mailto:foo@bar.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          foo@bar.com
        </a>
        .
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
          >
            <mock-styled.div />
            Back To App
          </mock-styled.button>
          <a
            href="https://foo.bar"
            rel="noopener noreferrer"
            target="_blank"
          >
            <mock-styled.button
              classname="mock-css."
              type="button"
            >
              <mock-styled.div />
              Launch App
            </mock-styled.button>
          </a>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname=""
    >
      The 
      will-test-dev-co-voracious-person
       app has been successfully installed. You can now launch the app from the ‘My Apps’ page or by clicking the button below.
    </mock-styled.p>
    <mock-styled.p
      classname=""
    >
      If you wish to contact the developer about using the app, you can do this via telephone at 
      07777777777
       or email at
       
      <a
        href="mailto:foo@bar.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        foo@bar.com
      </a>
      .
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
        >
          <mock-styled.div />
          Back To App
        </mock-styled.button>
        <a
          href="https://foo.bar"
          rel="noopener noreferrer"
          target="_blank"
        >
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            <mock-styled.div />
            Launch App
          </mock-styled.button>
        </a>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
